--- a/papers/actor-based-large-neighborhood-search/tex/introduction.tex
+++ b/papers/actor-based-large-neighborhood-search/tex/introduction.tex
@@ -142,7 +142,7 @@ $(\ElementWorkOrder,\ElementPeriod) \in \ParStrategicInclude$ for inclusion and
 $(\ElementWorkOrder, \ElementPeriod) \in \ParStrategicExclude$ for exclusion.
 
 \input{../../tex/models/strategic.tex}
-\strategicmodel[clustering=true, beta=false]
+\strategicmodel[clustering=true, beta=false, normal=true]
 
 The meta variables defines the broader setting that the model in implemented in.
 Equation~\eqref{eqn:meta:scheduler:strategic} specicies that the model is
