--- a/tex/models/tactical.tex
+++ b/tex/models/tactical.tex
@@ -1,26 +1,40 @@
-\begin{alignat}{2}
-	& \text{\rule{\linewidth}{0.8pt}} \notag \label{}                                                                                                                                                                                                                                                                                                                                                                     \\ 
-	& \textbf{Meta variables:}                                                                                                                                                                                                                                                             \notag\\
-	& \ElementScheduler \in \SetScheduler                                                                                                                                                                                                                                                    \\
-	& \VarStrategicWorkOrderAssignment{}{}                                                                                                                                                                                                                                                 \\
-	& \tau \in [0, \infty]                                                                                                                                                                                                                                                                 \\
-	& \text{\rule{\linewidth}{0.4pt}} \notag\\
-	& \textbf{Minimize:}                                                                                                                                                                                                                                                                   \notag\\
-	& \sum_{\ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}} \sum_{\ElementDays \in \SetDays{}} \ParTacticalValue \cdot \VarTacticalWork{\ElementDays}{\ElementOperation} + \sum_{r \in \SetResource} \sum_{\ElementDays \in \SetDays{}} \ParTacticalPenalty \cdot \VarTacticalExcess                                                                                                                                                                                \\  
-	& \text{\rule{\linewidth}{0.4pt}} \notag\\
-	& \textbf{Subject to:}                                                                                                                                                                                                                                                                 \notag\\
-	& \sum_{\ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}} \ParOperationWork{\ElementOperation} \cdot \VarTacticalWork{\ElementDays}{\ElementOperation} \leq \ParTacticalResource + \VarTacticalExcess \forall \ElementDays \in \SetDays{} \quad \forall r \in \SetResource                                                                                                                                                                                                                 \\ 
-	& \sum_{\ElementDays = \ParEarliestStart}^{\ParLatestFinish} \VarTacticalWorkBinary{\ElementDays}{\ElementOperation} = \ParDuration                                                                                                                                 \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}                                                                                                                                                                                                  \\
-	& \sum_{\ElementDays^* \in  \SetDays{\ParDuration}} \VarTacticalWorkBinary{\ElementDays^*}{\ElementOperation}                                                                                                                    = \ParDuration \cdot \VarTacticalWorkBinaryConsecutive                                                                                                                                                                                                        \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}} \quad \forall \ElementDays \in \SetDays{}                                                                                                                                                        \\
-	& \sum_{\ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}} \VarTacticalWorkBinaryConsecutive = 1,                                                                                                                                         \quad \forall \ElementDays \in \SetDays{}                                                                                                                                                                                                                                            \notag\\
-	& \sum_{\ElementDays \in \SetDays{}} \ElementDays \cdot \VarTacticalWorkBinary{\ElementDays}{\ElementOperation1} + \VarTacticalOperationDifference  = \sum_{\ElementDays \in \SetDays{}} \ElementDays \cdot \VarTacticalWorkBinary{\ElementDays}{\ElementOperation2}  \quad \forall (o1, \ElementOperation2) \in \ParFinishStart                                                                                                                                                                                                                                 \\ 
-	& \sum_{\ElementDays \in \SetDays{}} \ElementDays \cdot \VarTacticalWorkBinary{\ElementDays}{\ElementOperation1} = \sum_{\ElementDays \in \SetDays{}} \ElementDays \cdot \VarTacticalWorkBinary{\ElementDays}{\ElementOperation2}                                     \quad \forall (o1, \ElementOperation2) \in \ParStartStart                                                                                                                                                                                                                                  \\ 
-	& \VarTacticalWork{\ElementDays}{\ElementOperation} \leq \ParNumberOfPeople \cdot \ParOperatingTime                                                                                                                                                                   \quad \forall \ElementDays \in \SetDays{} \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}                                                                                                                                                        \\
-	& \VarTacticalWork{\ElementDays}{\ElementOperation} \in \mathbb{R} \quad                                                                                                                                                                                            \quad \forall \ElementDays \in \SetDays{} \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}                                                                                                                                                        \\
-	& \VarTacticalExcess \in \mathbb{R} \quad                                                                                                                                                                                                                           \quad \forall r \in \SetResource \quad \forall \ElementDays \in \SetDays{}                                                                                                                                                                                                                 \\
-	& \VarTacticalWorkBinary{\ElementDays}{\ElementOperation} \in \{0, 1\}\quad                                                                                                                                                                                         \quad \forall \ElementDays \in \SetDays{} \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}                                                                                                                                                        \\
-	& \VarTacticalWorkBinaryConsecutive \in \{0, 1\}\quad                                                                                                                                                                                                               \quad \forall \ElementDays \in \SetDays{} \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}                                                                                                                                                        \\
-	& \VarTacticalOperationDifference \in \{0, 1\}                                                                                                                                                                                                                              \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}\\
-	& \text{\rule{\linewidth}{0.8pt}} \notag \label{}                                                                                                                                                                                                                                                                                                                                                                     \\ 
-\end{alignat}
+\newif\ifincludenormal\
 
+\pgfkeys{
+	/tacticalmodel/.is family, /tacticalmodel,
+	default/.style = {
+		normal=true,
+	},
+	normal/.is if=includenormal,
+}
+\newcommand{\tacticalModel}[1][]{
+	\pgfkeys{/tacticalmodel, default, #1}
+	\begin{alignat}{2}
+		& \text{\rule{\linewidth}{0.8pt}} \notag \label{}                                                                                                                                                                                                                                                                                                                                                                     \\ 
+		& \textbf{Meta variables:}                                                                                                                                                                                                                                                             \notag\\
+		& \ElementScheduler \in \SetScheduler                                                                                                                                                                                                                                                    \\
+		& \VarStrategicWorkOrderAssignment{}{}                                                                                                                                                                                                                                                 \\
+		& \tau \in [0, \infty]                                                                                                                                                                                                                                                                 \\
+		& \text{\rule{\linewidth}{0.4pt}} \notag\\
+		& \textbf{Minimize:}                                                                                                                                                                                                                                                                   \notag\\
+		& + \sum_{\ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}} \sum_{\ElementDays \in \SetDays{}} \ParTacticalValue \cdot \VarTacticalWork{\ElementDays}{\ElementOperation} \notag \\
+		& + \sum_{r \in \SetResource} \sum_{\ElementDays \in \SetDays{}} \ParTacticalPenalty \cdot \VarTacticalExcess                                                                                                                                                                                \\  
+		& \text{\rule{\linewidth}{0.4pt}} \notag\\
+		& \textbf{Subject to:}                                                                                                                                                                                                                                                                 \notag\\
+		& \sum_{\ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}} \ParOperationWork{\ElementOperation} \cdot \VarTacticalWork{\ElementDays}{\ElementOperation} \leq \VarTacticalResource + \VarTacticalExcess \quad \forall \ElementDays \in \SetDays{} \quad \forall r \in \SetResource                                                                                                                                                                                                                 \\ 
+		& \sum_{\ElementResource \in \SetResource} \VarTacticalResource \leq \ParTacticalResource \quad \forall \ElementDays \in \SetDays{} \quad \forall \ElementTechnician \in \SetTechnician \\
+		& \sum_{\ElementDays \in \SetDays{}} \VarTacticalResource \leq \ParTechnicianSkill \quad \forall \ElementResource \in \SetResource \quad \forall \ElementTechnician \in \SetTechnician \\
+		& \VarTacticalWork{\ElementDays}{\ElementOperation} \leq \ParNumberOfPeople \cdot \ParOperatingTime \cdot \VarTacticalWorkBinary{\ElementDays}{\ElementOperation}                                                                                                                                                                   \quad \forall \ElementDays \in \SetDays{} \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}                                                                                                                                                        \\
+		& \sum_{\ElementDays = \ParEarliestStart}^{\ParLatestFinish} \VarTacticalWorkBinary{\ElementDays}{\ElementOperation} = \ParDuration                                                                                                                                 \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}                                                                                                                                                                                                  \\
+		& \sum_{\ElementDays^* \in  \SetDays{\ParDuration}} \VarTacticalWorkBinary{\ElementDays^*}{\ElementOperation}                                                                                                                    = \ParDuration \cdot \VarTacticalWorkBinaryConsecutive                                                                                                                                                                                                        \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}} \quad \forall \ElementDays \in \SetDays{}                                                                                                                                                        \\
+		& \sum_{\ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}} \VarTacticalWorkBinaryConsecutive = 1,                                                                                                                                         \quad \forall \ElementDays \in \SetDays{}                                                                                                                                                                                                                                            \notag\\
+		& \sum_{\ElementDays \in \SetDays{}} \ElementDays \cdot \VarTacticalWorkBinary{\ElementDays}{\ElementOperation1} + \VarTacticalOperationDifference  = \sum_{\ElementDays \in \SetDays{}} \ElementDays \cdot \VarTacticalWorkBinary{\ElementDays}{\ElementOperation2}  \quad \forall (o1, \ElementOperation2) \in \ParFinishStart                                                                                                                                                                                                                                 \\ 
+		& \sum_{\ElementDays \in \SetDays{}} \ElementDays \cdot \VarTacticalWorkBinary{\ElementDays}{\ElementOperation1} = \sum_{\ElementDays \in \SetDays{}} \ElementDays \cdot \VarTacticalWorkBinary{\ElementDays}{\ElementOperation2}                                     \quad \forall (o1, \ElementOperation2) \in \ParStartStart                                                                                                                                                                                                                                  \\ 
+		& \VarTacticalWork{\ElementDays}{\ElementOperation} \in \mathbb{R} \quad                                                                                                                                                                                            \quad \forall \ElementDays \in \SetDays{} \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}                                                                                                                                                        \\
+		& \VarTacticalExcess \in \mathbb{R} \quad                                                                                                                                                                                                                           \quad \forall r \in \SetResource \quad \forall \ElementDays \in \SetDays{}                                                                                                                                                                                                                 \\
+		& \VarTacticalWorkBinary{\ElementDays}{\ElementOperation} \in \{0, 1\}\quad                                                                                                                                                                                         \quad \forall \ElementDays \in \SetDays{} \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}                                                                                                                                                        \\
+		& \VarTacticalWorkBinaryConsecutive \in \{0, 1\}\quad                                                                                                                                                                                                               \quad \forall \ElementDays \in \SetDays{} \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}                                                                                                                                                        \\
+		& \VarTacticalOperationDifference \in \{0, 1\}                                                                                                                                                                                                                              \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}\\
+		& \text{\rule{\linewidth}{0.8pt}} \notag \label{}                                                                                                                                                                                                                                                                                                                                                                      
+	\end{alignat}
+}
