--- a/tex/definitions.tex
+++ b/tex/definitions.tex
@@ -33,12 +33,15 @@
 \newcommand{\ElementMessage}[2]{m_{#1}^{#2}}
 
 % Parameters
-\newcommand{\ParStrategicUrgency}[1][\VarMetaTime]{strategic\_urgency_{\ElementWorkOrder \ElementPeriod}(#1)}
+\newcommand{\ParStrategicUrgency}[1][\VarMetaTime]{strategic\_urgency_{\ElementWorkOrder\ElementPeriod}(#1)}
 \newcommand{\ParStrategicResourcePenalty}{strategic\_resource\_penalty}
 \newcommand{\ParClusteringValue}{clustering\_value_{\ElementWorkOrder1, \ElementWorkOrder2}}
-\newcommand{\ParStrategicResource}[1]{resource_{\ElementPeriod\ElementResource}(\VarMetaTime#1)}
+\newcommand{\ParStrategicResource}[2]{resource_{\ElementPeriod\ElementResource#2}(\VarMetaTime#1)}
 
 \newcommand{\ParStrategicWorkOrderWorkLoad}{work\_order\_workload_{\ElementWorkOrder \ElementResource}}
+\newcommand{\ParStrategicTechnicianWork}[1]{technician\_work_{\ElementPeriod\ElementTechnician}(\VarMetaTime#1)}
+\newcommand{\ParTechnicianSkill}[0]{technician\_skills_{\ElementResource\ElementTechnician}(\VarMetaTime)}
+
 \newcommand{\ParStrategicInclude}{include_{\ElementWorkOrder\ElementPeriod}(\VarMetaTime)}
 \newcommand{\ParStrategicExclude}{exclude_{\ElementWorkOrder\ElementPeriod}(\VarMetaTime)}
 \newcommand{\ParTacticalValue}{tactical\_value_{\ElementDays\ElementOperation}(\VarMetaTime)}
@@ -55,7 +58,7 @@
 
 \newcommand{\ParOperatingTime}{operating\_time_{\ElementOperation}}
 \newcommand{\ParDuration}{duration_{\ElementOperation}(\VarMetaTime)}
-\newcommand{\ParSupervisorValue}{supervisor\_value_{\ElementActivity \ElementTechnician}(\VarMetaTime, \VarStartOfSegment{t}{}, \VarFinishOfSegment{t}{})} 
+\newcommand{\ParSupervisorValue}{supervisor\_value_{\ElementActivity\ElementTechnician}(\VarMetaTime, \VarStartOfSegment{t}{}, \VarFinishOfSegment{t}{})} 
 \newcommand{\ParFeasible}{feasible_{at}(\VarIncludeActivity{})}
 \newcommand{\ParOperationsForWorkOrder}{work\_order\_to\_operations_{\ElementWorkOrder }}
 
@@ -76,8 +79,10 @@
 
 % Variables
 \newcommand{\VarStrategicWorkOrderAssignment}[2]{\alpha_{#1#2}(\VarMetaTime)}
+\newcommand{\VarStrategicResource}[2]{\psi_{\ElementPeriod\ElementResource#2}(\VarMetaTime#1)}
 \newcommand{\VarStrategicExcess}{\epsilon_{\ElementPeriod\ElementResource}(\VarMetaTime)}
 \newcommand{\VarTacticalWork}[2]{\beta_{#1#2}(\VarMetaTime)}
+\newcommand{\VarTacticalResource}[0]{\Psi_{\ElementDays\ElementResource\ElementTechnician}(\VarMetaTime)}
 \newcommand{\VarTacticalExcess}{\mu_{\ElementResource \ElementDays}(\VarMetaTime)} 
 
 \newcommand{\VarTacticalWorkBinary}[2]{\sigma_{#1#2}(\VarMetaTime)}
@@ -85,7 +90,8 @@
 \newcommand{\VarTacticalOperationDifference}{\Delta_{\ElementOperation}(\VarMetaTime)}
 \newcommand{\VarSupervisorAssignment}[2]{\gamma_{#1#2}(\VarMetaTime)}
 
-\newcommand{\VarSupervisorAssignmentWhole}{\phi_{\ElementOperation}(\VarMetaTime)}
+\newcommand{\VarSupervisorOperationWhole}{\phi_{\ElementOperation}(\VarMetaTime)}
+\newcommand{\VarSupervisorWorkOrderWhole}{\Phi_{\ElementWorkOrder}(\VarMetaTime)}
 \newcommand{\VarActivityWork}[1]{\rho_{#1}(\VarMetaTime)}
 \newcommand{\VarProcessingTime}{\delta_{\ElementActivity\ElementWorkSegment}(\VarMetaTime)} 
 \newcommand{\VarActiveSegment}[2]{\pi_{#1#2}(\VarMetaTime)}
